# Thryve

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GraphicsContext.h  IGraphicsContext.h  IRenderContext.h  ThryveApplication.cpp  ThryveApplication.h  main.cpp
Profiling/: ProfilerSetup.bat  ProfilerSetup.sh  profiler.py  requirements.txt
ThryveRenderer/: CMakeLists.txt
ThryveRenderer/include/: Layer.h  LayerStack.cpp  LayerStack.h  ThreadPool.h  UniformBufferObject.h  Vertex2D.h  pch.h
ThryveRenderer/include/Core/: App.cpp  App.h  Camera.h  Configuration.h  GraphicsAPI.h  IService.h  Log.h  Memory.cpp  Memory.h  Profiling.h  Ref.h  Service.h  ServiceRegistry.h  System.h  Window.h
ThryveRenderer/include/Renderer/: RenderCommandQueue.h  RenderCommandQueue.hpp  RenderContext.h  Renderer.h  Renderer.hpp
ThryveRenderer/include/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.h  VulkanCommandPoolManager.h  VulkanCommandQueueManager.cpp  VulkanCommandQueueManager.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptor.h  VulkanDescriptorManager.h  VulkanDescriptorSetBuilder.h  VulkanDeviceSelector.h  VulkanFrameSynchronizer.h  VulkanImGuiLayer.h  VulkanIndexBuffer.h  VulkanInstance.h  VulkanPipeline.h  VulkanRenderContext.h  VulkanRenderPass.h  VulkanRenderPassBuilder.h  VulkanSwapChain.h  VulkanTextureImage.cpp  VulkanTextureImage.h  VulkanUniformBuffer.h  VulkanVertexBuffer.h  VulkanWindow.h  VulkanWindowContext.h
ThryveRenderer/include/imGui/: VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  imGuiLayer.h
ThryveRenderer/include/utils/: ImageUtils.h  SingleTimeCommandUtil.h  VkDebugUtils.h  VulkanBufferUtils.h
ThryveRenderer/shaders/: convertshader.ps1  convertshader.sh  triangle.frag  triangle.vert
ThryveRenderer/shaders/SPIRV/: triangle.frag.spv  triangle.vert.spv
ThryveRenderer/src/: Layer.cpp  ThreadPool.cpp  pch.cpp
ThryveRenderer/src/Core/: App.cpp  Camera.cpp  Log.cpp  Memory.cpp  Profiling.cpp  ServiceRegistry.cpp  Window.cpp
ThryveRenderer/src/Renderer/: RenderCommandQueue.cpp  RenderContext.cpp  Renderer.cpp
ThryveRenderer/src/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandPoolManager.cpp  VulkanContext.cpp  VulkanDescriptor.cpp  VulkanDescriptorManager.cpp  VulkanDescriptorSetBuilder.cpp  VulkanDeviceSelector.cpp  VulkanFrameSynchronizer.cpp  VulkanImGuiLayer.cpp  VulkanIndexBuffer.cpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanRenderContext.cpp  VulkanRenderPass.cpp  VulkanRenderPassBuilder.cpp  VulkanSwapChain.cpp  VulkanTextureImage.cpp  VulkanUniformBuffer.cpp  VulkanVertexBuffer.cpp  VulkanWindow.cpp  VulkanWindowContext.cpp
ThryveRenderer/src/imGui/: imGuiLayer.cpp
ThryveRenderer/src/utils/: SingleTimeCommandUtil.cpp  VulkanBufferUtils.cpp
config/: Config.h.in
